# FlexSEA-Stack-SharedLib

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md
flexsea-system/src/: flexsea_device_spec.c
inc/: flexsea_board.h  flexsea_config.h  trapez.h
scripts/: populateHeaderFolder1.py  prepLibFolder.py
src/: flexsea_board.c  flexsea_config.c  trapez.c
